--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	],
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@pouchlab/lite": "^1.0.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
@@ -55,6 +56,7 @@
 	"dependencies": {
 		"@codexteam/icons": "^0.3.0",
 		"@floating-ui/dom": "^1.6.5",
+		"dragula": "^3.7.3",
 		"jquery": "^3.7.1",
 		"lowdb": "^7.0.1",
 		"valibot": "^0.31.0"
